--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -43,7 +43,7 @@
             tools:text="Rafli Rasyidin" />
 
         <TextView
-            android:id="@+id/tv_company"
+            android:id="@+id/tv_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_semibold"
@@ -51,7 +51,7 @@
             app:layout_constraintEnd_toEndOf="@id/tv_username"
             app:layout_constraintStart_toStartOf="@id/tv_username"
             app:layout_constraintTop_toBottomOf="@id/tv_username"
-            tools:text="PT. Telkom Indonesia" />
+            tools:text="User" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
